--- a/Apps/Gotify/docker-compose.yml
+++ b/Apps/Gotify/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - type: bind
         source: /DATA/AppData/$AppID/data
         target: /gotify
-        mode": rw
+        mode: rw
         allocation": automatic
     x-casaos:
       ports:
