--- a/Apps/Gotify/appfile.json
+++ b/Apps/Gotify/appfile.json
@@ -1,8 +1,8 @@
 
 {
 	"version": "2.0",
-	"title": "2FAuth",
-	"name": "2fauth",
+	"title": "gotify",
+	"name": "gotify",
 	"icon": "https://cdn.jsdelivr.net/gh/IceWhaleTech/CasaOS-AppStore@main/Apps/2FAuth/icon.png",
 	"tagline": "A web app to manage your Two-Factor Authentication (2FA) accounts and generate their security codes",
 	"overview": "2FAuth is a web based self-hosted alternative to One Time Passcode (OTP) generators like Google Authenticator, designed for both mobile and desktop.",
