docker-compose update
Docker-compose is updated !

--- a/Apps/Gotify/docker-compose.yml
+++ b/Apps/Gotify/docker-compose.yml
@@ -39,6 +39,7 @@ services:
 x-casaos:
   architectures:
     - arm64
+  port_map: "2222"
   main: Gotify
   author: ProBreizh35
   developer: Gotify
