--- a/Apps/Authelia/docker-compose.yml
+++ b/Apps/Authelia/docker-compose.yml
@@ -6,16 +6,21 @@ services:
       resources:
         reservations:
           memory: 64M
+    network_mode: bridge
+    ports:
+      - target: 9095
+        published: "9095"
+        protocol: tcp
     restart: unless-stopped 
     environment:
       - TZ=$TZ
     volumes:
       - type: bind
         source: /DATA/AppData/$AppID/config
-        target: /authelia/config
+        target: /config
     x-casaos:
       volumes:
-        - container: /authelia/config
+        - container: /config
           description:
             en_us: Authelia data directory.
             fr_fr: Répertoire des données de Authelia
@@ -26,6 +31,7 @@ x-casaos:
     - "386"
     - arm64
     - arm
+  port_map: "127.0.0.1:9095:9095"
   main: authelia
   author: ProBreizh35
   category: Network
